# terminal-game-library

./: .gitignore  CMakeLists.txt  Makefile  README.md
headers/: utils.h
headers/game_errors/: game_errors.h
headers/input/: input.h  keys.h
headers/object/: object.h
headers/renderer/: renderer.h
headers/window/: flags.h  window.h
src/: main.cpp  utils.c  utils.cpp
src/game_errors/: game_errors.cpp
src/input/: input.cpp
src/object/: object.cpp
src/renderer/: renderer.cpp
src/window/: window.cpp
